--- a/src/App.css
+++ b/src/App.css
@@ -457,7 +457,21 @@ transition: all 300ms ease;
     background-color: transparent;
 }
 .orders td , .orders th{
-  padding: 13px 0px !important;
+  padding: 13px 10px !important;
+}
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+.upload-btns{
+    gap: 10px;
+    display: flex;
+}
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
 @media screen and (max-width:1200px) {
   .w-container{
